# voice-agent-Articence

./: .env.example  .gitignore  README.md  pyproject.toml  test_gemini.py  test_openrouter.py
docs/: architecture.md  latency_analysis.md
docs/examples/: query_rewriting.md  voice_output.md
frontend/: index.html
frontend-react/: index.html  package-lock.json  package.json
frontend-react/src/: App.jsx  index.css
frontend-react/src/components/chat/: InputBar.jsx  MessageItem.jsx  MessageList.jsx
frontend-react/src/components/layout/: Sidebar.jsx
frontend-react/src/components/shared/: MetricCard.jsx  StatusItem.jsx
frontend-react/src/utils/: constants.js
scripts/: build_index.py  download_manuals.py
src/: __init__.py  clean_server.py  config.py  main.py  simple_server.py
src/asr/: __init__.py  intent_detector.py  streaming_asr.py
src/generation/: __init__.py  filler_generator.py  llm_client.py  nvidia_client.py  openrouter_client.py
src/pipeline/: __init__.py  coordinator.py  metrics.py
src/query/: __init__.py  context_manager.py  rewriter.py
src/retrieval/: __init__.py  dense_search.py  hybrid_merger.py  reranker.py  sparse_search.py
src/voice/: __init__.py  kokoro_tts.py  optimizer.py  phonetic.py  tts_client.py
tests/: test_pipeline.py
